041_reverse_str/grade.txt
Grading at 09/11/2017:14:55:43.205396
For commit ID a1dda6d297d6c0c2ad47cd69af9992abfa37989e
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:7:24: error: ‘return’ with a value, in function returning void [-Werror]
   if(str==NULL) return 0;
                        ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
